Updated companion with Litebase changes.

--- a/TotalCrossSDK/docs/TotalCross Companion.lyx
+++ b/TotalCrossSDK/docs/TotalCross Companion.lyx
@@ -6665,6 +6665,17 @@ The original font of TotalCross was a Tahoma font generated inside a Windows
  
 \end_layout
 
+\begin_layout Section
+Litebase
+\end_layout
+
+\begin_layout Standard
+Please notice that all indices files must be erased in order to use Litebase
+ tables created with version 2.67 with Litebase 2.7 and vice-versa.
+ Moreover, tables using cryptography created in version 2.7 can't be used
+ with version 2.67.
+\end_layout
+
 \begin_layout Chapter
 SuperWaba to TotalCross conversion
 \end_layout
