Added logger info.

--- a/LitebaseSDK/docs/Litebase Companion.lyx
+++ b/LitebaseSDK/docs/Litebase Companion.lyx
@@ -1886,6 +1886,43 @@ If it is prefered using logging all the time, the PDA WILL run out of storage
  
 \end_layout
 
+\begin_layout Enumerate
+If the default logger is used, it will be saved in 
+\family typewriter
+Settings.appPath
+\family default
+.
+ On Android, it is not always possible to fetch the log file unless changing
+ some access permissions or even rooting the device.
+ Since this may be undesirable, the log file can be saved on the external
+ card so that it can be easily fetched.
+ In order to change its place, it is necessary to create it using 
+\family typewriter
+totalCross.util.Logger
+\family default
+.
+ Here is an example for Android using the default path for the external
+ card:
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+File log = new File(Convert.appendPath("/sdcard/", "Litebase_" + new Time().getTim
+eLong() + '.' + Settings.applicationId + ".LOGS"), File.CREATE_EMPTY, -1);
+\end_layout
+
+\begin_layout Plain Layout
+
+LitebaseConnection.logger = Logger.getLogger("litebase", -1, log);
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Compatibility
 \end_layout
@@ -22831,6 +22868,47 @@ News
 All the companion was updated.
  Please take an overall look at it.
  
+\end_layout
+
+\begin_layout Subsection
+Logging and Debugging
+\end_layout
+
+\begin_layout Enumerate
+If the default logger is used, it will be saved in 
+\family typewriter
+Settings.appPath
+\family default
+.
+ On Android, it is not always possible to fetch the log file unless changing
+ some access permissions or even rooting the device.
+ Since this may be undesirable, the log file can be saved on the external
+ card so that it can be easily fetched.
+ In order to change its place, it is necessary to create it using 
+\family typewriter
+totalCross.util.Logger
+\family default
+.
+ Here is an example for Android using the default path for the external
+ card:
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+File log = new File(Convert.appendPath("/sdcard/", "Litebase_" + new Time().getTim
+eLong() + '.' + Settings.applicationId + ".LOGS"), File.CREATE_EMPTY, -1);
+\end_layout
+
+\begin_layout Plain Layout
+
+LitebaseConnection.logger = Logger.getLogger("litebase", -1, log);
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_body
