--- a/TotalCrossSDK/docs/TotalCross Companion.lyx
+++ b/TotalCrossSDK/docs/TotalCross Companion.lyx
@@ -6409,7 +6409,7 @@ erial);
 \end_layout
 
 \begin_layout Chapter
-Differences between TotalCross 1 and 2
+TotalCross 2 Differences
 \end_layout
 
 \begin_layout Section
