--- a/TotalCrossSDK/docs/TotalCross Companion.lyx
+++ b/TotalCrossSDK/docs/TotalCross Companion.lyx
@@ -1089,7 +1089,7 @@ TotalCross version, e.g.
 
 \begin_layout Itemize
 Platform used and OS version, e.g.
- JDK 1.5, Windows XP, Windows Mobile 5
+ JDK 1.6, Windows XP, Windows Phone 8
 \end_layout
 
 \begin_layout Itemize
